--- a/BaseInputAdapter/src/main/res/values/colors.xml
+++ b/BaseInputAdapter/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
 
-
+    <color name="deepskyblue">#00bfff</color><!--深天蓝色 -->
     <color name="color_999">#999999</color>
     <color name="color_000">#000000</color>
     <color name="color_af0000">#af0000</color>
