--- a/BaseInputAdapter/src/main/res/layout/multi_type_item_two_button.xml
+++ b/BaseInputAdapter/src/main/res/layout/multi_type_item_two_button.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="25sp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:gravity="center">
+    android:gravity="center"
+    android:paddingTop="24dp"
+    android:paddingBottom="24dp">
     <Button
         android:id="@+id/multi_type_item_button1"
         android:paddingLeft="5sp"
         android:paddingRight="5sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:background="@drawable/btn_select_bg"
         android:text="增加"/>
 
@@ -19,7 +21,7 @@
         android:paddingRight="5sp"
         android:layout_marginLeft="30sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:background="@drawable/btn_select_bg"
         android:text="提交"/>
 </LinearLayout>
