--- a/BaseInputAdapter/src/main/res/layout/multi_type_item_dividing.xml
+++ b/BaseInputAdapter/src/main/res/layout/multi_type_item_dividing.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="45sp"
+    android:layout_height="30sp"
     android:orientation="horizontal"
-    android:id="@+id/root_layout"
-    android:background="@color/transparent">
+    android:id="@+id/root_layout">
 </LinearLayout>
